fix: properly display multi-line app prompts
* Fixes that multi-line app prompts were displayed on a single line due
  to the missing `code` class.
* Fixes that code overlap (horizontal) is scrollable but doesn't
  overflow and flaws the UI.

--- a/report-app/src/app/shared/styles/callouts.scss
+++ b/report-app/src/app/shared/styles/callouts.scss
@@ -11,6 +11,7 @@
       font-family: monospace;
       font-size: 0.75rem;
       white-space: pre-wrap;
+      overflow: scroll;
     }
 
     &.neutral {
